add some wrap symbols.